<resources>
    <string name="app_name">Duara</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_photo_detail">Photo Detail</string>
    <string name="author">author</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="browse_image">Browse image</string>
    <string name="image_title">image title</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="photo_title_text">Title: %s</string>
    <string name="photo_tags_text">Tags: %s</string>
    <string name="action_search">Search</string>
    <string name="searchable_hint">Enter photo Tags</string>
    <string name="search_fail">No photos match Search Criteria.\n\n Use search icon to search for Photos</string>
    <string name="play_single_video">play a single video</string>
    <string name="standalone_sub_menu">standalone sub menu</string>
    <string name="play_video">PLAY VIDEO</string>
    <string name="play_playlist">play playlist</string>
    <string name="undefined_button">Undefined Button Clicked</string>
    <string name="search_photos">Search Photos</string>
    <string name="view_photos">View Posts</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_disconnect">Sign Out and Disconnect</string>
    <string name="title_activity_maps">Map</string>
    <string name="see_places">your chill spots</string>
    <string name="view_hackerank">Hacker Articles</string>
    <string name="facebook_app_id">2346710998992588</string>
    <string name="fb_login_protocol_scheme">fb2346710998992588</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_channel_notification_name">Topic</string>
    <string name="subscribe">subscribe</string>
    <string name="login_token">login Token</string>
    <string name="msg_subscribed">Subscribe To a Topic</string>
    <string name="msg_subscribed_failed">Failed to subscribe To a Topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %S</string>
    <string name="fcm_message">FCM Message</string>
    <string name="welcome_text">Welcome to Duara</string>
    <string name="disconnect">Disconnect</string>
    <string name="logout">LogOut</string>
    <string name="launch_icon">Launch Icon</string>
    <string name="have_account">Already Have Account</string>
    <string name="need_account">Need a New Account?</string>
    <string name="create_act">Create a New Account</string>
    <string name="display_name">Display Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="song_name">Song Name</string>
    <string name="artist">Artist</string>
    <string name="play">Play</string>
    <!--    <string name="photo_author_text">%1$s %2$s %3$s</string>-->
</resources>
