<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="turi.manzi.manzikotlin.LoginActivity">
    <item
        android:id="@+id/btnPlaySingle"
        android:title="@string/play_single_video"/>
    <item
        android:id="@+id/btnStandAlone"
        android:title="@string/standalone_sub_menu"/>
    <item
        android:id="@+id/btnViewPhotos"
        android:title="@string/view_photos"/>
    <item
        android:id="@+id/btnSavePlaces"
        android:title="@string/see_places"/>
    <item
        android:id="@+id/btnHackerArticles"
        android:title="@string/view_hackerank"/>
    <item
        android:id="@+id/logTokenButton"
        android:title="@string/login_token"/>
    <item
        android:id="@+id/subscribeButton"
        android:title="@string/subscribe"/>
    <item
        android:id="@+id/disconnectButton"
        android:title="@string/logout"/>
</menu>
