<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PhotoDetailActivity"
    tools:showIn="@layout/activity_photo_detail">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/photo_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                tools:text="@string/author" />

            <ImageView
                android:id="@+id/photo_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/browse_image"
                android:scaleType="center"
                app:srcCompat="@drawable/placeholder" />

            <TextView
                android:id="@+id/photo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/photo_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="12sp"
                tools:text="@string/tags" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>