<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_margin="5pt"
        android:background="@drawable/background_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_name"
                android:textSize="27sp"
                android:textStyle="bold" />

            <TextView
                android:paddingBottom="10pt"
                android:id="@+id/authorId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist"
                android:textSize="14sp" />


        </LinearLayout>

        <Button
            android:background="@drawable/button_background"
            android:layout_weight="0"
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />
    </LinearLayout>


</LinearLayout>