<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="81dp" >

    <Button
        android:id="@+id/btnPlayVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="81dp"
        android:text="@string/play_video"
        app:layout_constraintBottom_toTopOf="@+id/btnPlayList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlayList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:text="@string/play_playlist"
        app:layout_constraintStart_toStartOf="@+id/btnPlayVideo"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayVideo" />

    <Button
        android:id="@+id/btnSearchPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="97dp"
        android:text="@string/search_photos"
        app:layout_constraintStart_toStartOf="@+id/btnPlayList"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayList" />
</androidx.constraintlayout.widget.ConstraintLayout>