<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context="turi.manzi.manzikotlin.CreateAccountActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/browse_image"
            android:src="@drawable/chat_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/create_act"
            android:textColor="#fff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingEnd="30dp">

            <EditText
                android:id="@+id/accountDisplayNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/display_name"
                android:inputType="textPersonName"
                android:paddingBottom="10dp"
                android:textColor="#f0f7f4"
                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/accountEmailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:textColor="#f0f7f4"
                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/accountPasswordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:textColor="#f0f7f4"
                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <Button
                    android:id="@+id/accountCreateActBtn"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/create_act"
                    android:textColor="#d3d3d3" />

            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
